deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website-container
        image: localhost:32000/mywebsite:latest
        ports:
        - containerPort: 80

---

# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  selector:
    app: website
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
